[package]
name = "brime-ftl-plugin"
version = "0.1.0"
authors = ["Garrett Graves <gravesg57@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3", features = ["full"] }
tokio-util = {version = "0.4.0", features = ["codec"]}
bytes = "0.5.0"
futures = "0.3.7"
rand = "0.5.0"
hex = "0.4.2"
futures-util = "0.3.7"
ring = "0.16.19"
